@@ -33,11 +33,13 @@ package com.oracle.javafx.scenebuilder.kit.editor.panel.inspector.editors;
 
 import com.oracle.javafx.scenebuilder.kit.metadata.property.ValuePropertyMetadata;
 import com.oracle.javafx.scenebuilder.kit.metadata.property.value.DoublePropertyMetadata;
+
 import java.util.ArrayList;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 
@@ -51,9 +53,12 @@ public class DoubleEditor extends AutoSuggestEditor {
 
     private Map<String, Object> constants;
 
-    @SuppressWarnings("LeakingThisInConstructor")
     public DoubleEditor(ValuePropertyMetadata propMeta, Set<Class<?>> selectedClasses, Map<String, Object> constants) {
         super(propMeta, selectedClasses, new ArrayList<>(constants.keySet()), AutoSuggestEditor.Type.DOUBLE);
+        initialize(constants);
+    }
+    
+    private void initialize(Map<String, Object> constants) {
         this.constants = constants;
 
         EventHandler<ActionEvent> onActionListener = event -> {
@@ -79,7 +84,7 @@ public class DoubleEditor extends AutoSuggestEditor {
         if (val.isEmpty()) {
             val = "0"; //NOI18N
             getTextField().setText(val);
-            return new Double(val);
+            return Double.valueOf(val);
         }
         Object constantValue = constants.get(val.toUpperCase(Locale.ROOT));
         if (constantValue != null) {
